refactor(ui): 重构基类控制器并优化哈希类型控制器- 在 BaseController 中添加 Initializable接口并实现相关方法 - 在 BaseKeyContentController 中添加公共初始化方法和样式设置 -优化 HashTypeController 中的代码结构和样式设置 - 调整表格初始化和查询逻辑，提高代码可读性和维护性